# ppln-heparim

./: .zenodo.json  README.md  config.json  env.yml  pyproject.toml  requirements.txt
pipelines/: AISegmentationPipeline.py  GadoxateAnalysisPipeline.py  ParallelRegistrationEngine.py  RawSignalExtractionPipeline.py
src/: modeling.py  registration.py  segmentation.py
src/heparim/: __init__.py  ppln.py  stage_1_restructure.py
wip/: LiverTSRadiologist.py  LiverTSRadiologist_test.py  RegistrationAndTimecourseZarray.py
wip/ScriptsFromLaptop/: BatchLiver.py  CompareWithMohamed.py  CreateTimeCourseData.py  CreateTimeCourseDataV2.py  GadoxateAnalysisScript.py  LiverTSRadiologist.py  RegistrationAndTimecourse.py  liver.py  reformatDICEcsv.py
