[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ppln-heparim"
version = "0.0.0"
dependencies = [
  'dbdicom',
  'ants',
  'collections',
  'concurrent.futures',
  'dcmri',
  'dicom2nifti',
  'gc',
  'glob',
  'json',
  'logging',
  'matplotlib',
  'mdreg',
  'napari',
  'numpy',
  'os',
  'pandas',
  'pydicom',
  'SimpleITK',
  'sys',
  'tempfile',
  'tkinter',
  'totalsegmentator',
  'tqdm',
  'zarr',
  'zipfile'
]

[tool.setuptools.packages.find]
where = ["src"]