[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ppln-heparim"
version = "0.0.0"
dependencies = [
  "dbdicom",
  "antspyx",          # Fixed: PyPI package name for ants is 'antspyx'
  "dcmri",
  "dicom2nifti",
  "matplotlib",
  "mdreg",
  "napari[all]",      # Enhanced: [all] ensures UI/Qt backends are installed
  "numpy",
  "pandas",
  "pydicom",
  "SimpleITK",
  "totalsegmentator",
  "tqdm",
  "zarr"
]

[tool.setuptools.packages.find]
where = ["src"]